4.0.0: Java 17; add `TypeInfo` and type information utilities; add to modules; improve caching with soft references